# impkit

./: .gitignore  Cargo.toml  README.md  events.d.ts  example-flat.json  example-nested.json  impkit.toml  lateness.json  package-lock.json  package.json  readme.md  test.json  tsconfig.json
.github/workflows/: docker-image.yml
gutenberg/: Cargo.toml
gutenberg/src/: lib.rs  types.rs
gutenberg/src/tests/: mod.rs
gutenberg/src/utils/: string.rs
src/: database.ts  main.rs  main.ts
src/helpers/: env.ts  floatplane.ts  parser.ts  s3.ts  sponsors.ts  topics.ts  transcription.ts  whisper.ts  youtube.ts
src/helpers/types/: conda.ts  floatplane.ts
src/utils/: config.rs  env.rs  mod.rs  tickers.rs  types.rs
src/utils/dropbox/: mod.rs  thread_tasks.rs
src/utils/string/: mod.rs
src/utils/ui/: keybinds.rs  mod.rs  renderer.rs
src/utils/ui/overlays/: exit_confirmation.rs  help.rs  mod.rs
src/utils/ui/pages/: landing.rs
