[package]
name = "gutenberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.33", features = ["serde", "clock", "pure-rust-locales", "now"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
strsim = "0.11.0"
